Increase input font size to avoid zoom on iOS
If the input font size is smaller than 16px, iOS zoom in the page when
the input gets focus.

--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -206,12 +206,24 @@ h6 {
   @apply --marketplaceH6FontStyles;
 }
 
-input,
+input {
+  font-family: var(--fontFamily);
+  font-weight: var(--fontWeightMedium);
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.1px;
+  /* No margins for default font */
+
+  @media (--viewportMedium) {
+    font-size: 16px;
+    line-height: 32px;
+  }
+}
+
 textarea,
 select,
 li {
   @apply --marketplaceDefaultFontStyles;
-  line-height: 24px;
 }
 
 p,
